--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     const subjects = [
       { code: "184", name: "PHYSICAL EDUCATION" },
       { code: "004", name: "PUNJABI" },
-      { code: "086", name: "DESHI BHAKTI" },
+      { code: "086", name: "DESH BHAKTI" },
       { code: "241", name: "PULLDOWN" },
       { code: "085", name: "NOIDA TO GURGAON MARATHON" },
       { code: "138", name: "BRAHMOS THROW", additional: true }
